--- a/ejercicio32.html/estilo.css
+++ b/ejercicio32.html/estilo.css
@@ -6,11 +6,13 @@
 }
 p{
     color: red;
+    border: red 2px;
+    background-image: url("img/JayT.jpeg") ;
 }
 *{
     border: green dotted 1px;
     padding: 10px;
     margin: 10px;
     background-color: darkturquoise; 
-    background-image: url("img/JayT.jpeg");
+    background-image: url("img/kobe.jpg");
 }
